# gitarch-demo

./: .env  DEPLOYMENT.md  README.md  WEB3_IMPLEMENTATION.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
contracts/: README.md
contracts/poap/: Cargo.toml  lib.rs  lib.rs.backup
src/: App.tsx  index.css  main.tsx
src/components/: Navbar.tsx  NetworkIndicator.tsx  ProjectCard.tsx  WalletConnect.tsx
src/config/: blockchain.ts
src/contracts/: poapAbi.ts
src/hooks/: usePolkadot.ts  useWallet.tsx
src/integrations/supabase/: types.ts
src/pages/: Auth.tsx  Dashboard.tsx  Explore.tsx  Index.tsx  Profile.tsx  ProjectDetail.tsx  UploadProject.tsx
src/services/: ipfs.ts
supabase/: config.toml
supabase/functions/mint-poap/: index.ts
supabase/migrations/: 20251112164426_ba4a214b-3dd7-4ff1-9b17-54854377e81d.sql  20251112164459_2f2c6eac-8bb1-4889-b9fa-a3f775438d99.sql
